fix compile error (#11)
* Style.layout bugs

* Add pique-lesson-bg to cms files

--- a/cms/static/sass/partials/_variables.scss
+++ b/cms/static/sass/partials/_variables.scss
@@ -218,6 +218,7 @@ $ui-link-color-focus: $blue-s1;
 // ====================
 $ui-notification-height: ($baseline*10);
 $ui-update-color: $blue-l4;
+$pique-lesson-bg: #f0f3f5;
 
 // +Deprecated
 // ====================
